force-app/main/default/objects/External_Attendee__c/External_Attendee__c.object-meta.xml
<CustomObject>
    <label>External Attendee</label>
    <nameField>
        <displayFormat>EA-{0000}</displayFormat>
        <label>External Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>