force-app/main/default/objects/External_Attendee__c/fields/Attendee_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attendee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>External Attendees</relationshipLabel>
    <relationshipName>External_Attendees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>