force-app/main/default/objects/External_Attendee__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <formula>Attendee_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Email</label>
    <type>Text</type>
</CustomField>